--- a/src/events/index.v.html
+++ b/src/events/index.v.html
@@ -81,44 +81,34 @@
     <div class="col-xs-12 col-sm half-bg first-xs last-sm" style="background-image: url('/events/hike.jpg'); background-position: left center;"></div>
 </div>
 
-<!-- <div class="row" id="mediation-for-recovery">
+<div class="row" id="mediation-for-recovery">
     <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>Meditation For Recovery</h2>
-                    <h3>Tuesday's at 6:30pm MST</h3>
+                    <h2>Acceptance And Commitment Therapy</h2>
+                    <h3>A Basic Training</h3>
                     <hr>
                 </div>
 
                 <div class="col-xs-12">
-                    <p>Meditation for recovery is a free, weekly drop- in class open to our community. Whether you are brand new to mediation,
-                    curious about how the practice may apply to life in recovery, or a seasoned mediator looking to take a weekly
-                    mindfulness break with other like- minded individuals, this class is for you! No prior mediation experience necessary.</p>
-
-                    <p>We will open each group with a brief introduction to the practice and discussion of a weekly aspect of mediation and its
-                    application to life in recovery. This will be followed by a 30 min meditation intermittent guidance.</p>
-
-                    <p>Join us every Tuesday evening! No registration required.</p>
-                    <a class="button blue"
-                        href="http://r20.rs6.net/tn.jsp?f=001uGcOOh1bnDMegxF8Ssad9Qp76cL39Jt9CI8wsFHHWVK0TgnxQNqm5IxEe-XcPkatGwIXc68CRJYrH04fHz0t_p_Gbqli0hAlNvt3tgbFJqJIe_BgWlnARk5URTB1I89fPX-XJWyB0FBgfBvg8Q6Mg4Exc3GrlQVALqAEhGJSrZVSeF-JR-Snh3kiVd-k1AcpNN06WPR70JBabrUU9XH_bA==&c=PV70SZARdwMsGZ-IkYj3aJf02jqM-d1vnUMBh06OdmVRWDDUMAGD2w==&ch=bTF7rK5GIdq2zGKUmHYh249A2earj_Ut673m3pyraT_okgzkeAVxOw=="
-                        target="_blank">Join Us</a>
-                    <hr>
+                    <p>Join Us: <strong>Saturday 6/26</strong> from <strong>9AM - 5:30PM</strong> (Includes Lunch).</p>
+                    <p>Learn how to help your clients unhook from their critical thoughts, accept painful emotions, and connect with their underlying values - all in the service of living a rich and meaningful life. This training will be full of experiential exercises to help you learn these skills in an authentic way.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-3">
-                    <img src="./events/rachael-uris.jpg" alt="picture of rachael uris">
+                    <img src="./events/dr-jean.png" alt="picture of jean rosmarin">
                 </div>
                 <div class="col-sm-12 col-md-9">
                     <h3>Facilitated By:</h3>
-                    <h4>Rachael Uris, MA</h4>
-                    <p>Director of Business Development</p>
+                    <h4>Jean Rosmarin, PHD</h4>
+                    <p>is a licensed psychologist with 29 years of clinical and supervisory experience in a variety of settings, including community mental health and private practice. Jean has led numerous training and consultation groups on ACT, MI, and SFT. She applies ACT not only to her clinical work, but to own life as well.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/buddah.jpg'); background-position: center;"></div> -->
+    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/buddah.jpg'); background-position: center;"></div>
 </div>
 
 <div class="muted">
