--- a/src/events/index.v.html
+++ b/src/events/index.v.html
@@ -94,6 +94,9 @@
                 <div class="col-xs-12">
                     <p>Join Us: <strong>Saturday 6/26</strong> from <strong>9AM - 5:30PM</strong> (Includes Lunch).</p>
                     <p>Learn how to help your clients unhook from their critical thoughts, accept painful emotions, and connect with their underlying values - all in the service of living a rich and meaningful life. This training will be full of experiential exercises to help you learn these skills in an authentic way.</p>
+                    <p>For questions, email Rachael Uris <a href="mailto:ruris@flatironsrecovery.com">ruris@flatironsrecovery.com</a></p>
+                    <a class="button blue" href="https://www.eventbrite.com/e/156580904701" target="_blank">Register</a>
+                    <hr>
                 </div>
             </div>
             <div class="row">
@@ -101,14 +104,13 @@
                     <img src="./events/dr-jean.png" alt="picture of jean rosmarin">
                 </div>
                 <div class="col-sm-12 col-md-9">
-                    <h3>Facilitated By:</h3>
                     <h4>Jean Rosmarin, PHD</h4>
                     <p>is a licensed psychologist with 29 years of clinical and supervisory experience in a variety of settings, including community mental health and private practice. Jean has led numerous training and consultation groups on ACT, MI, and SFT. She applies ACT not only to her clinical work, but to own life as well.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/buddah.jpg'); background-position: center;"></div>
+    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/act.jpg'); background-position: center;"></div>
 </div>
 
 <div class="muted">
